# spotifyd

./: Cargo.toml
postman/: Spotifyd.postman_collection.json
src/: config.rs  main.rs  main_loop.rs  process.rs  rest_api.rs  setup.rs
