[package]
authors = ["Simon Persson <simon@flaskpost.org>", "Sven Lechner <sven.lechner@rwth-aachen.de>"]
edition = "2021"
name = "spotifyd"
description = "A Spotify daemon"
repository = "https://github.com/Spotifyd/spotifyd"
license = "GPL-3.0-only"
version = "0.3.3"

[dependencies]
alsa = { version = "0.6.0", optional = true }
chrono = "0.4"
daemonize = "0.4"
dbus = { version = "0.9", optional = true }
dbus-tokio = { version = "0.7.3", optional = true }
dbus-crossroads = { version = "0.5.1", optional = true }
fern = { version = "0.6.0", features = ["syslog-4"] }
futures = "0.3.15"
gethostname = "0.2.0"
hex = "0.4"
keyring = { version = "0.10.1", optional = true }
libc = "0.2.82"
log = "0.4.6"
percent-encoding = "2.1.0"
reqwest = "0.11.3"
# rspotify = "0.11.5" #{path = "../rspotify"} 
rspotify = { version = "0.11.5", features = ["client-ureq", "ureq-rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0.115", features = ["derive"] }
sha-1 = "0.10.0"
structopt = "0.3.17"
syslog = "4.0.0"
tokio = {version = "1.6.1", features = ["signal", "rt-multi-thread"] }
tokio-compat = { version = "0.1.6", features = ["rt-current-thread"] }
tokio-compat-02 = "0.2.0"
tokio-stream = "0.1.7"
url = "2.2.2"
xdg = "2.2"

librespot-audio = { version = "0.4.2", default-features=false }
librespot-connect = { version = "0.4.2"}
librespot-core = { version = "0.4.2"}
librespot-discovery = { version = "0.4.2"}
librespot-metadata = { version = "0.4.2"}
librespot-playback = { version = "0.4.2" }
librespot-protocol = { version = "0.4.2" }

toml = "0.5.8"
color-eyre = "0.6.2"

axum = {version = "0.5.13", optional = true }
serde_json = { version = "1.0.83", optional = true } 

[target."cfg(target_os = \"macos\")".dependencies]
whoami = "1.2.1"

[dev-dependencies]
env_logger = "0.9.0"

[features]
alsa_backend = ["librespot-playback/alsa-backend", "alsa"]
dbus_keyring = ["keyring"]
dbus_mpris = ["dbus", "dbus-tokio", "dbus-crossroads", "rspotify"]
rest_api = ["axum", "serde_json", "rspotify"]
default = ["pulseaudio_backend", "rest_api"]
portaudio_backend = ["librespot-playback/portaudio-backend"]
pulseaudio_backend = ["librespot-playback/pulseaudio-backend"]
rodio_backend = ["librespot-playback/rodio-backend"]

[package.metadata.deb]
depends = "$auto, systemd, pulseaudio"
features = [
    "pulseaudio_backend",
    "rest_api"
]
assets = [
    ["target/release/spotifyd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/spotifyd/README", "644"],
    ["contrib/spotifyd.service", "etc/systemd/user/", "644"],
]
